--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+panic = "abort"
+opt-level = 3     # 0-3
+strip = 'symbols' # strip symbols from binary
+lto = true        # enable link time optimization
 
 [dependencies]
 anyhow = "1.0.66"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+rayon = "1.6.0"
