--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,32 +12,32 @@ concurrency:
 
 jobs:
   # lint job
-  # clippy-lint:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
+  clippy-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: install rust
-  #       uses: actions-rs/toolchain@v1
-  #       with:
-  #         toolchain: 1.62.0
-  #         profile: minimal
-  #         override: true
-  #         components: clippy
+      - name: install rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.62.0
+          profile: minimal
+          override: true
+          components: clippy
 
-  # - run: rustup component add clippy
+      - run: rustup component add clippy
 
-  # - name: clippy lint
-  #   run: |
-  #     cargo clippy -- \
-  #     -W clippy::nursery \
-  #     -W clippy::pedantic \
-  #     -W clippy::unwrap_used \
-  #     -W clippy::expect_used \
-  #     -A clippy::future_not_send \
-  #     -A clippy::must_use_candidate \
-  #     -A clippy::missing_errors_doc \
-  #     -A clippy::unused_async \
+      - name: clippy lint
+        run: |
+          cargo clippy -- \
+          -W clippy::nursery \
+          -W clippy::pedantic \
+          -W clippy::unwrap_used \
+          -W clippy::expect_used \
+          -A clippy::future_not_send \
+          -A clippy::must_use_candidate \
+          -A clippy::missing_errors_doc \
+          -A clippy::unused_async \
 
   # cargo check job
   check:
@@ -58,7 +58,7 @@ jobs:
   # cargo test job
   test:
     runs-on: ubuntu-latest
-    needs: [check]
+    needs: [clippy-lint, check]
     steps:
       - uses: actions/checkout@v3
 
