--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -70,4 +70,4 @@ jobs:
           override: true
 
       - name: cargo test
-        run: cargo test -- --test-threads=2 --show-output
+        run: cargo test -- --test-threads 2 --show-output
