--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# use jemallocator memory allocator
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+jemallocator = "0.3.2"
+
 [profile.release]
 panic = "abort"
 opt-level = 3     # 0-3
 strip = 'symbols' # strip symbols from binary
 lto = true        # enable link time optimization
+debug = true      #necessary for flamegraph
 
 [profile.test]
-panic = "abort"
 opt-level = 3     # 0-3
 strip = 'symbols' # strip symbols from binary
 lto = true        # enable link time optimization
