--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ lto = true        # enable link time optimization
 anyhow = "1.0.66"
 rayon = "1.6.0"
 array_tool = "1.0.3"
+tracing = "0.1"
+tracing-subscriber = "0.3"
